# rocket-diesel-experiments

./: Cargo.toml  Makefile  Rocket.toml
migrations/2021-11-30-021428_posts_table/: up.sql
migrations/2021-12-04-000815_create_post_fragments/: down.sql  up.sql
others/: posts_samples.sql
src/: error.rs  main.rs  models.rs  schema.rs  state.rs
src/controller/: fragments.rs  mod.rs  posts.rs
static/: 1.txt
